Added header to popup

--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,11 @@
   <body class="bg-indigo-900">
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
+    <header class="flex items-center justify-between border-b border-indigo-700 p-3">
+      <img class="h-6" src="img/logo.png" alt="AnonAddy Logo">
+      <span class="text-white text-xs self-center">Anonymous Email Forwarding</span>
+    </header>
+
     <div id="app"></div>
 
     <script src="./app.js"></script>
