Added description and domain selection

--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
 
     <header class="flex items-center justify-between border-b border-indigo-700 p-3">
       <img class="h-6" src="img/logo.png" alt="AnonAddy Logo">
-      <span class="text-white text-xs self-center">Anonymous Email Forwarding</span>
+      <span class="text-grey-50 text-xs self-center">Anonymous Email Forwarding</span>
     </header>
 
     <div id="app"></div>
