--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,9 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <header class="flex items-center justify-between border-b border-indigo-700 p-3">
-      <img class="h-6" src="img/logo.png" alt="AnonAddy Logo">
+        <a href="https://app.anonaddy.com" target="_blank" rel="nofollow noreferrer noopener">
+            <img class="h-6" src="img/logo.png" alt="AnonAddy Logo">
+        </a>
       <span class="text-grey-50 text-xs self-center">Anonymous Email Forwarding</span>
     </header>
 
