--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link href="./app.css" rel="stylesheet">
   </head>
-  <body class="bg-grey-50 text-grey-900">
+  <body class="bg-indigo-900 text-grey-900">
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <div id="app"></div>
