Updated tabs to buttons

--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>AnonAddy</title>
     <meta charset="utf-8">
     <link href="./app.css" rel="stylesheet">
   </head>
