Update for rebrand

--- a/src/app.html
+++ b/src/app.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>AnonAddy</title>
+    <title>addy.io</title>
     <meta charset="utf-8">
     <link href="./app.css" rel="stylesheet">
   </head>
